test/success/fn.dsk
let main: fn = () -> int
    return 42

assert(main() == 42)
