test/error/param-default-type-mismatch.dsk
let f = (x: int = "hello") -> void
    return
end
